feat: Refactor authentication service and update configuration properties